syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "SnapshotProto";

package liquibase;

service SnapshotService {
  rpc execute(SnapshotRequest) returns (Response) {}
}

/* Capture the current state of the database */
message SnapshotRequest {
  optional string default_catalog_name = 1; // The default catalog name to use for the database connection
  optional string default_schema_name = 2; // The default schema name to use for the database connection
  optional string driver = 3; // The JDBC driver class
  optional string driver_properties_file = 4; // The JDBC driver properties file
  optional string password = 5; // Password to use to connect to the database
  optional string schemas = 6; // The schemas to snapshot
  optional string snapshot_filters = 7; // [PRO] Types of objects to snapshot: Catalog, CheckConstraint, Column, DatabasePackage, DatabasePackageBody, ForeignKey, Function, Index, PrimaryKey, Schema, Sequence, StoredProcedure, Synonym, Table, Trigger, UniqueConstraint, View
  optional string snapshot_format = 8; // Output format to use (JSON, YAML, or TXT)
  string url = 9; // *required* The JDBC database connection URL
  optional string username = 10; // Username to use to connect to the database
  liquibase.GlobalOptions global_options = 11;
}

message Response {
  string message = 1;
}
